1999-09-30  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* transports/smtp/smtp.c:
	    Seen a case where immediately successive EHLO + HELO
	    both fail, and at *same* target that very same HELO
	    also succeeds...  Most surprisingly, within same session
	    which just rejected one message with an error, simply
	    continuing with an open stream (sort of bug..) we do
	    succesfully deliver email..

1999-09-27  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* scheduler/readconfig.c:
	    If the  channel/host  selector clause contains wild-cards
	    at the 'channel' part, AND the command= parameter contains
	    '$channel' in it (once or more), set CFG_WITHHOST, because
	    such transport agents can't switch over from one channel to
	    another.

	* transports/sm/sm.c:
	    - If write to pipe fails (except with 'gotsigpipe'), cleanup
	      PIPEs to the child process.
	    - Don't be upset even if write to pipe fails with EPIPE/SIGPIPE.

	* router/dateparse.c:
	    Certain pathologic inputs are able to feed extra data to
	    the date parsing, and it turned out to run with month zero,
	    which caused division-by-zero --> core dump...

1999-09-21  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* Makefile.in:
	    Version 2.99.52-pre3

1999-09-17  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* smtpserver/smtpserver.c:
	    Don't call  whoson(),  nor tcp-wrapper libraries in case
	    the smtpserver is not running from a network socket.

1999-09-15  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* configure.in, smtpserver/smtprouter.c:
	    For some proprietary ZMailer instances we realized that
	    we must pass arbitary environment variables down to the
	    router process run underneath the smtpserver.  Ergo,
	    ./configure for  putenv() function, and use it if available.

	* utils/policy-builder.sh.in:
	    Disable completely the old (original) spam-address
	    downloading with Lynx, and its associated tests.
	    Time has passed over them...
