@@ -1,5 +1,10 @@
 1999-09-30  Matti Aarnio  <mea@mea.tmt.tele.fi>
 
+	* smtpserver/smtpcmds.c:
+	    At MAIL FROM we may reject the email reception, and
+	    abort the email -- State change is allowed only if
+	    we didn't do the abort..
+
 	* transports/smtp/smtp.c:
 	    Seen a case where immediately successive EHLO + HELO
 	    both fail, and at *same* target that very same HELO
